client/kng-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kng
  namespace: bc4bebb8-1cf9-4534-a6e4-17e5d79ea119
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: kng
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
