client/ui-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    gestalt-app: ui
  name: gestalt-ui
spec:
  backend:
    serviceName: gestalt-ui
    servicePort: 80
